# simple_classifier

./: Dockerfile  MANIFEST.in  Makefile  README.md  debug.Dockerfile  pyproject.toml  setup.cfg  setup.py
requirements/: requirements-lint.txt  requirements.txt
simple_classifier/: checkpoint.py  config.py  dataset.py  inference.py  train.py  transform.py
simple_classifier/configs/: base.yml  mnist.yml
simple_classifier/utils/: env.py  experiment.py  io.py  log.py  onnxruntime.py  openvino.py  path.py  postprocessing.py  preprocessing.py  progress.py  tracking.py
